--- a/final_code.ipynb
+++ b/final_code.ipynb
@@ -70,11 +70,11 @@
     "mp_drawing = mp.solutions.drawing_utils\n",
     "mp_pose = mp.solutions.pose\n",
     "\n",
-    "# Initialize text-to-speech engine\n",
+    "\n",
     "#engine = pyttsx3.init()\n",
     "#engine.setProperty('rate', 150)\n",
     "\n",
-    "# Create a queue for TTS messages\n",
+    "\n",
     "last_spoken_time = 0\n",
     "last_spoken_message = \"\"\n",
     "SPEECH_COOLDOWN = 3\n",
@@ -119,7 +119,6 @@
     "    cv2.addWeighted(overlay, 0.5, image, 0.5, 0, image)\n",
     "    cv2.putText(image, text, position, font, scale, text_color, thickness, cv2.LINE_AA)\n",
     "\n",
-    "# Create error frame counters for each type of error\n",
     "error_frames_counter = {\n",
     "    'shoulder': 0,\n",
     "    'hip': 0,\n",
@@ -127,12 +126,12 @@
     "    'ankle': 0\n",
     "}\n",
     "\n",
-    "# Reset function for error counters\n",
+    "\n",
     "def reset_error_counters():\n",
     "    for key in error_frames_counter:\n",
     "        error_frames_counter[key] = 0\n",
     "\n",
-    "# Modified feedback function that checks error threshold      \n",
+    "    \n",
     "def provide_feedback(image, error_type, message, position, counter_key):\n",
     "    \"\"\"Provide feedback and mark that feedback was shown\"\"\"\n",
     "    global feedback_shown_in_round\n",
@@ -162,14 +161,13 @@
     "    angle = 360 - angle\n",
     "    return round(angle, 2)\n",
     "\n",
-    "round_statuses = {}  # To store if each round was correct/incorrect\n",
+    "round_statuses = {}  \n",
     "incorrect_rounds_count = 0\n",
     "        \n",
-    "error_tracking = {}  # Track errors for each round\n",
-    "error_threshold = 30  # Number of frames with errors before marking round as incorrect (around 30 frames per second)\n",
-    "        \n",
+    "error_tracking = {}  \n",
+    "error_threshold = 30 \n",
     "def update_round_status(round_num, has_feedback):\n",
-    "    \"\"\"Update the status of a completed round based on whether feedback was shown\"\"\"\n",
+    "   \n",
     "    global round_statuses, incorrect_rounds_count\n",
     "    \n",
     "    if has_feedback:\n",
@@ -178,20 +176,20 @@
     "    else:\n",
     "        round_statuses[round_num] = \"CORRECT\"\n",
     "\n",
-    "# In the main loop, add a flag to track if feedback was shown in current round\n",
+    "\n",
     "feedback_shown_in_round = False\n",
     "    \n",
     "def draw_angle_arc(image, center_point, start_point, angle, radius=50):\n",
     "    \"\"\"Draw an arc to visualize an angle\"\"\"\n",
-    "    # Convert points to pixel coordinates\n",
+    "   \n",
     "    height, width = image.shape[:2]\n",
     "    center = tuple(np.multiply(center_point, [width, height]).astype(int))\n",
     "    start = tuple(np.multiply(start_point, [width, height]).astype(int))\n",
     "    \n",
-    "    # Calculate start angle\n",
+    "   \n",
     "    start_angle = np.arctan2(start[1] - center[1], start[0] - center[0])\n",
     "    \n",
-    "    # Convert angle to radians\n",
+    "    \n",
     "    angle_rad = np.deg2rad(angle)\n",
     "    \n",
     "    # Calculate end angle\n",
@@ -208,7 +206,7 @@
     "                cv2.FONT_HERSHEY_SIMPLEX, 0.6, (255, 255, 0), 2)\n",
     "\n",
     "cap = cv2.VideoCapture(\"./3.mp4\")\n",
-    "# cap = cv2.VideoCapture(0)\n",
+    "\n",
     "\n",
     "\n",
     "#monitor = get_monitors()[0]\n",
@@ -243,7 +241,7 @@
     "        try:\n",
     "            landmarks = results.pose_landmarks.landmark\n",
     "            \n",
-    "            # Get landmarks\n",
+    "            \n",
     "            left_shoulder = [landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].x,\n",
     "                           landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].y]\n",
     "            left_elbow = [landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].x,\n",
@@ -326,7 +324,7 @@
     "            draw_angle_marker(image, left_ankle, ankle_correct, error_frames_counter['ankle'])\n",
     "            draw_angle_marker(image, right_ankle, ankle_correct, error_frames_counter['ankle'])\n",
     "\n",
-    "            # Determine stage and provide feedback\n",
+    "            \n",
     "            if avg_trunk_angle > 50:  # Set Up stage\n",
     "                current_stage = \"Set Up\"\n",
     "                if not shoulder_correct:\n",
